# algorithms-java

./: .bazelignore  .editorconfig  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  maven_install.json
sort/: BUILD  Insertion.java  Merge.java  Selection.java  Sorter.java
src/main/io/tstodden/algorithms/collinear/: BUILD  BruteCollinearPoints.java  LineSegment.java  Point.java
src/main/io/tstodden/algorithms/sort/: BUILD  Insertion.java  Merge.java  MergeBottomUp.java  Selection.java  Sorter.java
src/test/io/tstodden/algorithms/collinear/: BUILD  TestBruteCollinearPoints.java  TestPoint.java
src/test/io/tstodden/algorithms/sort/: BUILD  TestInsertion.java  TestMerge.java  TestMergeBottomUp.java  TestSelection.java
