"""
This module contains algorithm implementations for Algorithms 4th Edition.
"""
module(
    name = "algorithms",
    version = "0.0.1",
)

bazel_dep(name = "rules_java", version = "5.1.0")
bazel_dep(name = "rules_jvm_external", version = "4.4.2")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "junit:junit:4.13.2",
    ],
)

use_repo(
    maven,
    "maven",
    "unpinned_maven",
)
